welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:17: error: ';' expected but 'else' found.
    else if (i < max && i> max2)
    ^max2Value:24: error: Unmatched closing brace '}' ignored here
 }
 ^